--- a/test.html
+++ b/test.html
@@ -49,6 +49,15 @@
   align-items: center;
   margin-bottom: 0.75rem;
 }
+/* CSS に追記 */
+.radio-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.75rem;
+}
+.radio-row input[type="radio"] {
+  margin-right: 0.5rem;
+}
 
     
   </style>
@@ -274,25 +283,32 @@
   </div>
 
   <!-- 法人用 -->
-  <div id="terms-corporate">
-    <div class="form-group">
-      <label>お支払方法 <span style="color:red">*</span></label>
-      <input type="radio" id="corp-pay-bank"   name="お支払方法_corporate" value="銀行振込" required>
-      <label for="corp-pay-bank">銀行振込（前日まで）</label><br>
-      <input type="radio" id="corp-pay-cash"   name="お支払方法_corporate" value="現金">
-      <label for="corp-pay-cash">現金支払い</label><br>
-      <input type="radio" id="corp-pay-card"   name="お支払方法_corporate" value="カード">
+<div id="terms-corporate">
+  <div class="form-group">
+    <label>お支払方法 <span style="color:red">*</span></label>
+    <div class="radio-row">
+      <input type="radio" id="corp-pay-bank" name="お支払方法_corporate" value="銀行振込" required>
+      <label for="corp-pay-bank">銀行振込（前日まで）</label>
+    </div>
+    <div class="radio-row">
+      <input type="radio" id="corp-pay-cash" name="お支払方法_corporate" value="現金">
+      <label for="corp-pay-cash">現金支払い</label>
+    </div>
+    <div class="radio-row">
+      <input type="radio" id="corp-pay-card" name="お支払方法_corporate" value="カード">
       <label for="corp-pay-card">カード決済</label>
     </div>
-    <div class="form-group">
-      <input type="checkbox" id="corp-seal" name="注意事項_corporate" value="印鑑証明書必要">
-      <label for="corp-seal">場合により印鑑証明書等のご提出を求める場合がございます。</label>
-    </div>
-    <div class="form-group">
-      <input type="checkbox" id="corp-note" name="注意事項_corporate" value="空車状況により案内不可" required>
-      <label for="corp-note">ご申請頂いても空車状況により、ご案内できない場合があります。</label>
-    </div>
   </div>
+  <div class="form-group">
+    <input type="checkbox" id="corp-seal" name="注意事項_corporate" value="印鑑証明書必要">
+    <label for="corp-seal">場合により印鑑証明書等のご提出を求める場合がございます。</label>
+  </div>
+  <div class="form-group">
+    <input type="checkbox" id="corp-note" name="注意事項_corporate" value="空車状況により案内不可" required>
+    <label for="corp-note">ご申請頂いても空車状況により、ご案内できない場合があります。</label>
+  </div>
+</div>
+
 
   <div class="button-group">
     <button type="button" class="btn-prev">戻る</button>
