--- a/test.html
+++ b/test.html
@@ -541,10 +541,11 @@
   );
 
   // 送信ボタン抑制
-  submitBtn.addEventListener('click', e => {
-    if(submitBtn.disabled) e.preventDefault();
-  });
-
+ submitBtn.addEventListener('click', e => {
+  if (!submitBtn.disabled) {
+    form.submit();
+  }
+});
   // 入力欄にイベント登録
   steps.forEach(step => {
     step.querySelectorAll('input,select,textarea').forEach(el => {
