fix: 延長案内を延長確認に表示テキスト変更

--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
       <div class="section-title">お見積もり結果</div>
       <div id="resultContent"></div>
       <button class="copy-btn" onclick="copyResult()">結果をコピーする</button>
-      <div class="section-title">延長案内</div>
+      <div class="section-title">延長確認</div>
       <textarea id="extensionOutput" readonly></textarea>
-      <button class="copy-btn" onclick="copyExtensionText()">延長案内をコピーする</button>
+      <button class="copy-btn" onclick="copyExtensionText()">延長確認をコピーする</button>
       <div class="section-title" style="margin-top: 20px;">振込案内メッセージ</div>
       <textarea id="paymentOutput" readonly></textarea>
       <button class="copy-btn" onclick="copyPaymentText()">振込案内をコピーする</button>
